# Advent-of-Code

./: .gitignore  README.md  mix.exs
apps/advent_of_code_2023/: README.md  mix.exs
apps/advent_of_code_2023/lib/: advent_of_code_2023.ex
apps/advent_of_code_2023/lib/advent_of_code/: day_01.ex  day_03.ex  day_05.ex  day_06.ex  day_07.ex  day_10.ex  day_11.ex  day_12.ex  day_15.ex  day_16.ex  day_17.ex
apps/advent_of_code_2023/lib/mix/tasks/: runner.ex
apps/advent_of_code_2023/test/: example_test.exs
src/2023/advent_of_code_2023/: .gitignore  README.md  mix.exs
src/2023/advent_of_code_2023/lib/advent_of_code/: day_01.ex  day_02.ex  day_03.ex  day_04.ex  day_05.ex  day_06.ex  day_07.ex  day_08.ex  day_09.ex  day_10.ex  day_11.ex  day_12.ex  day_13.ex  day_14.ex  day_15.ex  day_16.ex  day_17.ex  day_18.ex  day_19.ex
src/2023/advent_of_code_2023/lib/mix/tasks/: runner.ex
src/2023/advent_of_code_2023/test/: test_runner.exs
src/2024/advent_of_code_2024/: .gitignore  README.md  advent_of_code_2024.opam  dune-project
src/2024/advent_of_code_2024/lib/: day_01.ml  day_02.ml  day_03.ml  day_04.ml  day_05.ml  day_06.ml  day_07.ml  day_08.ml  dune
src/2024/advent_of_code_2024/test/: dune
